<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp"
    tools:context=".IntroScreenActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/ims_cgm_logo_description"
        android:src="@drawable/ic_app_logo" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextButton"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4dp"
        android:text="@string/welcome_screen_text"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        tools:ignore="VisualLintLongText" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button_background"
        android:clickable="true"
        android:focusable="true"
        android:maxWidth="300dp"
        android:text="@string/welcome_screen_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_button"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>